# ITLab

./: CMakeLists.txt  Inp.cpp  Inp.h  Layer.cpp  Layer.h  Sum.cpp  Sum.h  Vector.h  main.cpp
